# modal-working-example

./: .gitignore  Dockerfile  Makefile  README.md  dataset.py  main.py  model.py  pyproject.toml
scripts/: generate_cifar10_subset.py  generate_random_weights.py
tests/: test_pytorch.py
